--- a/public/splashscreen.html
+++ b/public/splashscreen.html
@@ -31,7 +31,7 @@
             width: 48px;
             height: 48px;
             border: 4px solid #F3F4F6;
-            border-bottom-color: #0E61B1;
+            border-bottom-color: #006BFF;
             border-radius: 50%;
             display: inline-block;
             box-sizing: border-box;
